2005-03-18	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* H/csoundCore.h:
	* H/fftlib.h:
	* OOps/fftlib.c:
	  minor code changes related to FFT functions
	* Opcodes/ftconv.c:
	  removed use of direct convolution due to patent issues
	* H/csdl.h:
	  removed some unused macros (fewer is better)

2005-03-15  Michael Gogins <gogins@pipeline.com>
	* The Loris opcodes now work.
	* Removed pyrun.dll and -lswigpy from SConstruct,
	as SWIG 1.3.24 (current stable version) does not use it.
	* The Java wrappers are now built as a jar containing
	the CsoundVST package.
	* Added option to not build Java wrappers; as a result,
	CsoundVST builds on Linux again.
	* Removed documentation from the Windows installer.

2005-03-15  John ffitch  <jpff@cs.bath.ac.uk>

	* H/soundio.h (SOUNDIN): 
	* InOut/libsnd.c (sndinset): 
	* OOps/diskin.c (newsndinset): 
	* H/diskin.h (SOUNDINEW): Added skipinit argument to diskin and soundin

2005-03-14  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/modal4.c (marimbaset): Make zero valid probability for
	multiple strikes

2005-03-14	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Engine/oload.c:
	* H/csound.h:
	* H/csoundCore.h:
	* H/fftlib.h:
	* OOps/fftlib.c:
	  added new FFT code (faster than functions in fft.c)
	  new API functions:
	    csoundComplexFFT(), csoundInverseComplexFFT(),
	    csoundRealFFT(), csoundInverseRealFFT(),
	    csoundRSpectProd()
	  TODO: make allocation of tables safe with reentrant operation and
	        multiple instances (currently uses statics which is ugly)
	* Opcodes/ftconv.c:
	  use new FFT functions; opcode is faster now

2005-03-13	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Opcodes/ftconv.c:
	  new opcode (zero delay multichannel convolve, reads IR from ftable)
	  not fully tested yet
	* Engine/fgens.c:
	  added GEN52: creates interleaved multichannel table from other tables
	* Opcodes/spat3d.c:
	  fixed spat3dt slowdown at end of table